--- a/app/index.html
+++ b/app/index.html
@@ -36,29 +36,31 @@
   <script src="bower_components/d3/d3.js"></script>
   <script src="myjs/ocsp-space.js"></script>
   <script src="myjs/ocsp-graphnode.js"></script>
-  <script src="myjs/ocsp-canvas-utils.js"></script>
-  <script src="myjs/ocsp-selectable.js"></script>
-  <script src="myjs/ocsp-context-menu.js"></script>
-  <script src="myjs/ocsp-common.js"></script>
-  <script src="myjs/ocsp-actions.js"></script>
-  <script src="myjs/ocsp-draggable.js"></script>
-  <script src="myjs/ocsp-canvas.js"></script>
+  <!--<script src="myjs/ocsp-canvas-utils.js"></script>-->
+  <!--<script src="myjs/ocsp-selectable.js"></script>-->
+  <!--<script src="myjs/ocsp-context-menu.js"></script>-->
+  <!--<script src="myjs/ocsp-common.js"></script>-->
+  <!--<script src="myjs/ocsp-actions.js"></script>-->
+  <!--<script src="myjs/ocsp-draggable.js"></script>-->
+  <!--<script src="myjs/ocsp-canvas.js"></script>-->
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.css">
 
 
 </head>
-<body id="canvas-body">
-  <ul class="menu">
-    <li><a href="#!/view1">view1</a></li>
-    <li><a href="#!/view2">view2</a></li>
+<body >
+
+  <ul class="nav nav nav-tabs">
+    <li role="presentation" class="active"><a href="#!/view1">Home</a></li>
   </ul>
 
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
-  <div ng-view></div>
-
-  <div>Angular seed app: v<span app-version></span></div>
+  <div class="container-fluid">
+    <div ng-view></div>
+  </div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
