implement draw nodes

--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,7 @@
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.css">
 
 
+
 </head>
 <body >
 
@@ -68,6 +69,9 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-dragdrop/src/angular-dragdrop.js"></script>
+  <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+  <script src="bower_components/angular-esc-key/esc-key.js"></script>
+
 
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
