--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,13 @@
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.css">
 
+  <link rel="stylesheet" href="bower_components/angular-ui-select/dist/select.css">
+  <link rel="stylesheet" href="bower_components/bootstrap-tokenfield/dist/css/bootstrap-tokenfield.css">
+  <link rel="stylesheet" href="bower_components/bootstrap-tokenfield/dist/css/tokenfield-typeahead.css">
+  <script src="bower_components/bootstrap-tokenfield/dist/bootstrap-tokenfield.js"></script>
+  <link rel="stylesheet" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css">
+    <link rel="stylesheet" href="bower_components/isteven-angular-multiselect/isteven-multi-select.css">
+
 
 
 </head>
@@ -71,6 +78,12 @@
   <script src="bower_components/angular-dragdrop/src/angular-dragdrop.js"></script>
   <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script src="bower_components/angular-esc-key/esc-key.js"></script>
+  <script src="bower_components/angular-ui-select/dist/select.js"></script>
+  <script src="bower_components/angular-translate/angular-translate.js"></script>
+  <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+
+
+
 
 
   <script src="app.js"></script>
@@ -79,6 +92,10 @@
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
+  <script src="bower_components/isteven-angular-multiselect/isteven-multi-select.js"></script>
+
+  <script src="myjs/directives/token.js"></script>
+  <script src="myjs/services/strService.js"></script>
 
   <div id="context-menu" class="unselectable"></div>
 
