--- a/backup/1.html
+++ b/backup/1.html
@@ -18,3 +18,15 @@
      data-jqyoui-options="{hoverClass: 'ui-state-active',
 							tolerance: 'pointer'}"></div>
 
+
+
+<div class="row">
+    <div class="form-group">
+        <div class="col-sm-2">
+            <button type="button" class="btn btn-primary" ng-click="addNewEvent(task.events)">
+                添加输出事件
+            </button>
+        </div>
+    </div>
+</div>
+
