--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My AngularJS App</title>
+  <title>流程绘制页面</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -51,7 +51,8 @@
   <link rel="stylesheet" href="bower_components/bootstrap-tokenfield/dist/css/tokenfield-typeahead.css">
   <script src="bower_components/bootstrap-tokenfield/dist/bootstrap-tokenfield.js"></script>
   <link rel="stylesheet" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css">
-    <link rel="stylesheet" href="bower_components/isteven-angular-multiselect/isteven-multi-select.css">
+  <link rel="stylesheet" href="bower_components/isteven-angular-multiselect/isteven-multi-select.css">
+  <link rel="stylesheet" href="bower_components/angular-ui-notification/dist/angular-ui-notification.css">
 
 
 
@@ -81,6 +82,7 @@
   <script src="bower_components/angular-ui-select/dist/select.js"></script>
   <script src="bower_components/angular-translate/angular-translate.js"></script>
   <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+  <script src="bower_components/angular-ui-notification/dist/angular-ui-notification.js"></script>
 
 
 
