--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -429,6 +429,7 @@
 
             <div class="form-group">
                 <button type="button" class="btn btn-primary" ng-click="saveNode()">保存</button>
+                <button type="button" class="btn btn-info" ng-click="closeModal()">取消</button>
             </div>
         </form>
     </div>
@@ -496,7 +497,7 @@
 						animate:true,
 						onStart: 'startCallback'}"/>
         </span>
-        <a class="btn btn-primary pull-right" ng-click="preview()">Preview</a>
+        <a class="btn btn-primary pull-right" ng-click="preview()">预览</a>
     </div>
 
 </div>
